z-index of dropdowns corrected

--- a/css/singularity.css
+++ b/css/singularity.css
@@ -5,7 +5,6 @@
 	background-color: gray;
 	width: 100%;
 	height: 4000px;
-
 	overflow-y: auto;
 }
 	
@@ -19,7 +18,7 @@
 	margin-left:150px;
 	width:76.5%;
 	top: 0;
-
+    
 }
 
 /*Menu Bar*/
@@ -205,6 +204,7 @@
 	top: 51px;
 	left: 310px;
 	box-shadow:12px 13px 9px rgba(0,0,0,0.5);
+	z-index: 1;
 }
 .dropdown_faculty a{
 
@@ -215,7 +215,7 @@
 	display: block;
 	color: #bfbfbf;
     text-decoration: none;
-	z-index: 1;
+	
 
 }
 
@@ -238,6 +238,7 @@ z-index: -1;
 	left: 400px;
 	position: absolute;
 	box-shadow:12px 13px 9px rgba(0,0,0,0.5);
+	z-index: 1;
 }
 
 .dropdown_sulabs a{
@@ -265,6 +266,7 @@ z-index: -1;
 	left: 490px;
 	position: absolute;
 	box-shadow:12px 13px 9px rgba(0,0,0,0.5);
+	z-index: 1;
 }
 
 #dropdown_singularity_hr{
@@ -300,6 +302,7 @@ z-index: -1;
 	left: 637px;
 	position: absolute;
 	box-shadow:12px 13px 9px rgba(0,0,0,0.5);
+	z-index: 1;
 }
 
 .dropdown_global a{
